# drivebox-tenth

./: .gitignore  README.md
src/: CMakeLists.txt
src/ackermann_vehicle/ackermann_vehicle_description/meshes/: chassis.dae
src/ackermann_vehicle/ackermann_vehicle_description/urdf/: em_3905.urdf.xacro
src/ackermann_vehicle/ackermann_vehicle_gazebo/launch/: ackermann_vehicle.launch
src/ackermann_vehicle/ackermann_vehicle_gazebo/scripts/: drive2gazebo.py
src/ackermann_vehicle/ackermann_vehicle_gazebo/worlds/: simpleWall.world~
src/dino_cv/: CMakeLists.txt  package.xml
src/dino_cv/src/: april_detector.cpp  qr_detector.cpp  speed_detector.cpp
src/dino_map/: CMakeLists.txt  package.xml
src/dino_map/src/: main.cpp
src/dino_nav/: CMakeLists.txt  package.xml
src/dino_nav/cfg/: Dinonav.cfg
src/dino_nav/include/: Dinonav.h  Grid.h  actuation.h  common.h  dinonav.h  dummyviz.h  grid.h  pathfind.h  perception.h  planning.h  viewer.h  viz.h
src/dino_nav/msg/: Stat.msg
src/dino_nav/src/: Dinonav.cpp  Grid.cpp  actuation.cpp  brake_test.cpp  common.cpp  dataset.py  dinonav.cpp  grid.cpp  main.cpp  pathfind.cpp  perception.cpp  planning.cpp  viewer.cpp  viz.cpp
src/dino_nav/tracks/: fca.xml  track.xml
src/gazebo_models/circular_track/: model.config  model.sdf
src/gazebo_models/column/: model.config  model.sdf
src/gazebo_models/simple_track/: model.config  model.sdf
src/hack/teensy_drive/: teensy_drive.ino
src/launchers/: amcl.launch  dinonav.launch  dinonav_unity.launch  gazebo_sim.launch  start_all.launch  start_car.launch  start_test.launch  usb_cam.launch
src/rf2o_laser_odometry/src/: CLaserOdometry2D.cpp
src/rqt_f1tenth_steering/resource/: RobotSteering.ui~
src/rqt_f1tenth_steering/src/rqt_f1tenth_steering/: f1tenth_steering.py~
src/urg_node/src/: urg_node.cpp
src/zed-ros-wrapper/launch/: zed_camera.launch
